# TradeJournal

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: alembic.ini  compare_fills.py  compare_fills2.py  compare_fills3.py  compare_fills4.py  compare_fills5.py  compare_fills6.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_instrument_type.py  003_decimal_indexes_constraints.py  84a8bf1dd0ab_add_email_subject_body_to_fill.py  a3f8c2d1b4e9_add_greeks_and_indicators_to_fill.py  b7e3a9f2c841_add_extra_indicators_to_fill.py  c4d2e9f8a731_add_daily_review_table.py
backend/app/: database.py  main.py  models.py
backend/app/ai/: daily_reviewer.py  reviewer.py
backend/app/engine/: email_parser.py  enricher.py  gmail_poller.py  quotes.py  reconstructor.py
backend/app/routers/: accounts.py  auth.py  daily_review.py  fills.py  quotes.py  rebuild.py  stats.py  trades.py
backend/reports/: csv_vs_db_strict_findings_2026-04-29.md  reconciliation_report_2026-04-17.md  reconciliation_report_2026-04-18.md  reconciliation_report_individual_2026-04-18.md  reconciliation_report_individual_csv_vs_db_2026-04-29.md  reconciliation_report_roth_2026-04-18.md  reconciliation_report_roth_post-fix.md
backend/scripts/: backfill_greeks.py  csv_reconstruct.py  find_phantoms.py  generate_reconciliation_report.py  rebuild_trades.py
backend/tests/: test_email_parser.py  test_fill_import.py  test_gmail_poller.py  test_reconstructor.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
(+18 files in other folders)
